component: delete FigureImage

--- a/src/content/posts/es/10-consejos-que-yo-debería-seguir.mdx
+++ b/src/content/posts/es/10-consejos-que-yo-debería-seguir.mdx
@@ -23,7 +23,7 @@ Creo que muchas cosas impuestas en nosotros desde pequeños por la sociedad, la 
 
 ## 3. Empieza con el porqué
 
-Lo escuché por primera vez hace años de la boca **Simon Sine**k en un video de esos que [YouTube](https://www.youtube.com/watch?v=u4ZoJKF_VuA) te recomienda y desde entonces es algo que pienso, pero muy pasivamente y creo que debería de darle algo más de protagonismo.
+Lo escuché por primera vez hace años de la boca **Simon Sinek** en un video de esos que [YouTube](https://www.youtube.com/watch?v=u4ZoJKF_VuA) te recomienda y desde entonces es algo que pienso, pero muy pasivamente y creo que debería de darle algo más de protagonismo.
 
 En vez de pensar que o como hacer, pregúntate por qué quieres hacerlo. Todos tienen un qué desean, y más del doble de las personas que conoces creen saber el cómo, pero ninguno sabe por qué. **Al levantarte o iniciar un nuevo proyecto, pregúntate por qué quieres hacerlo.** O aun mejor ¿Por qué sigues/quieres ese trabajo/relación? Es una pregunta que te ayudará a conocerte mejor y por supuesto, te mantendrá motivado más tiempo que las otras, _a partir de el porqué, busca el cómo y por último el qué vendrá solo._
 
