add PostTranslations component

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -22,7 +22,8 @@
     "close_menu": "Close menu",
     "social": "Social",
     "links": "Links",
-    "copyright": "All rights reserved."
+    "copyright": "All rights reserved.",
+    "translation_available_in": "Translation available in"
   },
   "errors": {
     "not_found": "Page not found",
