--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -23,7 +23,8 @@
     "social": "Social",
     "links": "Enlaces",
     "copyright": "Todos los derechos reservados",
-    "translation_available_in": "Traducción disponible en"
+    "translation_available_in": "Traducción disponible en",
+    "original": "Original"
   },
   "errors": {
     "not_found": "Página no encontrada",
