improve about page text and design

--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -4,51 +4,48 @@ description: I'm a FrontEnd engineer with more than 8 years of experince trying 
 lang: "en"
 cvLink: "t.com"
 layout: "../../layouts/About.page.astro"
-skills: ["React", "JavaScript", "TypeScript", "Angular", "Unit Testing"]
 ---
 
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 import CardPost from "@/components/content/CardPost.astro";
 
-<FullWidthBlock withContainer class="not-prose min-h-screen bg-blue-50 px-8 py-12 dark:bg-slate-900 md:min-h-max md:py-24">
-    <h1 class="mb-8 text-4xl font-bold leading-snug text-slate-100">
-      Hi, I'm <span class="text-blue-50">Misael Taveras</span>. I love to build stuff with code, that you can use on
-      your browser.
-    </h1>
-    <div class="space-y-4 text-xl leading-relaxed text-slate-300">
-      <p>
-        I'm FrontEnd developer with more than 8 years of experience helping abroad companies to succeed.
-      </p>
-      <p>
-        My current goal is to <strong class="font-semibold text-blue-50">help <span class="text-blue-400">you</span> build</strong>
-        amazing high quality software.
-      </p>
+<FullWidthBlock withContainer class="min-h-screen bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:min-h-max md:py-24">
+    <div class="lg:grid lg:grid-cols-2 lg:gap-4">
+      <h1 class="!mt-0 text-4xl font-bold leading-snug dark:text-slate-100 max-w-2xl">Hi, I'm <span class="text-slate-950 dark:text-blue-50">Misael Taveras</span>. I love building stuff with code that you can use on your browser.</h1>
+      <div class="text-xl leading-relaxed dark:text-slate-300">
+
+        I'm a FrontEnd developer with **over eight years** of experience helping companies abroad succeed.
+
+        My current goal is to **help you build** incredible high-quality software.
+
+        I'm building with **React**, **TypeScript**, and **Node.js**.
+      </div>
     </div>
 </FullWidthBlock>
 
 ## Who am I?
 
-<span class="text-xl">I was born in 1996, in Santo Domingo, Dominican Republic.</span>
+I was born in 1996, in Santo Domingo, Dominican Republic 🇩🇴.
 
-I started learning how to code when I was 14 years old, with a not-so-legal copy of Visual Studio 2008. I was hooked since then.
-Somehow my dad got a PDF of a book about Macromedia Dreamweaver, that even though it was outdated, it was enough to get me started.
+I started learning to code when I was 14, with a *"not-so-legal"* copy of Visual Studio 2008. I have been hooked since then. Somehow my dad got a PDF of a book about Macromedia Dreamweaver. Even though it was outdated, it was enough to get me started. Since then, I've been learning independently, grabbing every opportunity to learn more about programming.
 
-Since that, I've been learning on my own grabing every opportunity I could to learn more about programming. By the time **I graduated in Computer Science in 2018**, I already had years of experience working as a developer on-site and as a freelancer.
-But I didn't stop there, I'm always learning new things, and I'm always looking for new challenges.
+When I graduated from college in **Computer Science in 2018**, I already had years of experience working as a developer on-site and freelancer. But I didn't stop there; I'm always learning new things and looking for new challenges.
 
-## What I do?
+## What I do
 
-The term FrontEnd Engineer can mean a lot of things, but for me, it means that I'm a developer that is focused on the user experience, and I'm always looking for ways to improve it.
+The term FrontEnd Engineer can mean a lot of things. It means that I use HTML, CSS, JavaScript and all the flavours in between to craft an interface that helps users achieve what they want and the company reach more users.
 
-For **the user** it means that the software will be fast, responsive, intuitive, and easy to use.
+I build what the user sees when they visit the page. The buttons, colours and interactions. The point of contact between the company and their users. And I'm always looking for ways to make the journey more pleasant.
 
-For **the company**, it means that the software will be delivered on time, easy to maintain, and extend.
+**For the user**: the software will be fast, responsive, intuitive, and easy to use.
 
-For **me**, it means that I will be able to work on a project that I can be proud of, and that I will be able to learn new things.
+**For the company**: the software will be delivered on time and on budget, easy to maintain, and extend.
 
-<FullWidthBlock withContainer class="bg-slate-900">
+**For me**: it is working on a project I can be proud of, where I'll learn new things.
 
-## What I believe?
+<FullWidthBlock withContainer class="bg-slate-200 dark:prose-blockquote:border-slate-700 prose-blockquote:border-slate-400 dark:bg-slate-900 prose-blockquote:opacity-80">
+
+## Core beliefs
 
 <div class="grid md:grid-cols-3 gap-8">
   <div>
@@ -57,11 +54,11 @@ For **me**, it means that I will be able to work on a project that I can be prou
   
   > Start with the user in mind, and everything else will follow.
   
-  A website, or an app usually is the point of contact between the user and the company. Web performance, accessibility, and usability are key to provide a good user experience.
+  A website or an app usually is the point of contact between the user and the company. Web performance, accessibility, and usability are vital in providing a good user experience.
   
-  **Web performance** I know how frustrating it can be to use a slow and unresponsive website. So I always aproach every situation with a progressive enhancement mindset.
-
-  **Accessibility** In contrast with other platforms, the web can be accessed from almost any device. With screens of all sizes, color ranges, and input methods; so thinking about accesibility is a topic that should be always on the table.
+  **Web performance**: I know how frustrating using a slow and unresponsive website can be. So I always approach every situation with a progressive enhancement mindset.
+  
+  **Accessibility**: Unlike other platforms, the web can be accessed from almost any device. With screens of all sizes, colour ranges, and input methods; so thinking about accessibility is a topic that should always be on the table.
 
   </div>
 
@@ -70,12 +67,12 @@ For **me**, it means that I will be able to work on a project that I can be prou
 ### Developer experience
   
   > Developers spend more time reading code than writing it.
-  
-  Having a good developer experience is key to have a good developer productivity. And good developer productivity means more value to our users.
-  
-  **Code quality** I always try to write code that is easy to read, and easy to understand avoiding unnecessary complexity and [hasty abstractions](https://kentcdodds.com/blog/aha-programming?utm_source=taverasmisael).
 
-  **Testing & Documentation** Part of being productive is not wasting time figuring out how things work. Havig the confidence that your changes won't break something else sometimes is underated. Writting good docs and tests has saved *future Misael* a handful of times.
+  Having a good developer experience is critical to having good developer productivity. And good developer productivity means more value to our users.
+
+  **Code quality**: I always try to write code that is easy to read and understand, avoiding unnecessary complexity and hasty abstractions.
+
+  **Testing & Documentation**: Part of being productive is not wasting time figuring out how things work. Having the confidence that your changes won't break something else sometimes is underrated. Writting good docs and tests has saved future Misael a handful of times.
 
   </div>
 
@@ -83,13 +80,13 @@ For **me**, it means that I will be able to work on a project that I can be prou
 
 ### Helping others
 
-> The end of all knowledge should be service to others.
+  > The end of all knowledge should be service to others.
 
-Althought I enjoy coding, I recently discovered that I find more joy helping others to improve their skills. I'm always looking for ways to help others to improve their skills.
+  Although I enjoy coding, I recently discovered that I find more joy in helping others to improve their skills. I'm always looking for ways to help others to improve their skills.
 
-**Teamwork** The best high quality software is built by teams, not by individuals. Relaying on others and helping others is key to build great software.
+  **Teamwork**: The best high-quality software is built by teams, not individuals. Relying on others and helping others is vital to building great software.
 
-**Mentoring** Sometimes having a one-on-one conversation with someone can be more valuable than reading a book, or watching a video. That's why I try to be [available](/en/contact) for questions and help as much as possible.
+  **Mentoring**: Sometimes, one-on-one conversation with someone can be more valuable than reading a book or watching a video. That's why [I am available](/en/contact) for questions and help as much as possible
 
   </div>
 </div>
