add companies and missing links. make the text less repetitive in some instances

--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -27,9 +27,9 @@ import CardPost from "@/components/content/CardPost.astro";
 
 I was born in 1996, in Santo Domingo, Dominican Republic 🇩🇴.
 
-I started learning to code when I was 14, with a *"not-so-legal"* copy of Visual Studio 2008. I have been hooked since then. Somehow my dad got a PDF of a book about Macromedia Dreamweaver. Even though it was outdated, it was enough to get me started. Since then, I've been learning independently, grabbing every opportunity to learn more about programming.
+I started learning to code when I was 14, with a *"not-so-legal"* copy of Visual Studio 2008. I have been hooked since then. Somehow my dad got a PDF of a book about Macromedia Dreamweaver. Even though it was outdated, it was enough to get me started. Since then, I've been learning independently, grabbing every opportunity improve my skills.
 
-When I graduated from college in **Computer Science in 2018**, I already had years of experience working as a developer on-site and freelancer. But I didn't stop there; I'm always learning new things and looking for new challenges.
+When I graduated from college in **Computer Science in 2018**, I already had years of experience working as a developer on-site and freelancer. But I didn't stop there; I'm always learning new things and looking for new challenges. This led me to work for international companies like [GBH](https://gbh.com.do/), [Virtual Mind](https://virtualmind.com/), [TheySaid](https://www.theysaid.io/), and others.
 
 ## What I do
 
@@ -70,7 +70,7 @@ I build what the user sees when they visit the page. The buttons, colours and in
 
   Having a good developer experience is critical to having good developer productivity. And good developer productivity means more value to our users.
 
-  **Code quality**: I always try to write code that is easy to read and understand, avoiding unnecessary complexity and hasty abstractions.
+  **Code quality**: I always try to write code that is easy to read and understand, avoiding unnecessary complexity and [hasty abstractions](https://kentcdodds.com/blog/aha-programming).
 
   **Testing & Documentation**: Part of being productive is not wasting time figuring out how things work. Having the confidence that your changes won't break something else sometimes is underrated. Writting good docs and tests has saved future Misael a handful of times.
 
