add ES translation for about page

--- a/src/pages/es/sobre-mi.mdx
+++ b/src/pages/es/sobre-mi.mdx
@@ -1,10 +1,104 @@
 ---
-title: Hola soy Misael Taveras
-description: Soy un desarollador web con más de 8 años de experiencia que intenta cada día mejorar.
-lang: 'es'
-cvLink: 't.com'
-layout: '../../components/pages/About.page.astro'
-skills: ['React', 'JavaScript', 'TypeScript', 'Angular', 'Unit Testing']
+title: Hola, soy Misael Taveras (taverasmisael)
+description: Soy un ingeniero de frontend con más de ocho años de experiencia que trata de mejorar cada día.
+lang: "es"
+cvLink: "t.com"
+layout: "../../layouts/About.page.astro"
 ---
 
-## Hola como estás
+import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
+import CardPost from "@/components/content/CardPost.astro";
+
+<FullWidthBlock withContainer class="min-h-screen bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:min-h-max md:py-24">
+    <div class="lg:grid lg:grid-cols-2 lg:gap-4">
+      <h1 class="!mt-0 text-4xl font-bold leading-snug dark:text-slate-100 max-w-2xl">Hola, soy <span class="text-slate-950 dark:text-blue-50">Misael Taveras</span>. Amo codear cosas que puedas ver en tu navegador.</h1>
+      <div class="text-xl leading-relaxed dark:text-slate-300">
+
+        Soy un ingeniero FrontEnd con **más de 8 años** de experincia ayudando a compañías internacionales a tener exito.
+
+        Mi meta actula es **ayudarte a construir** software asombroso y de alta calidad.
+
+        De momento estoy usando **React**, **TypeScript**, y **Node.js**.
+      </div>
+    </div>
+</FullWidthBlock>
+
+## ¿Quién soy?
+
+Nací en 1996, en Santo Domingo, República Dominicana 🇩🇴.
+
+Empecé a aprender a programar cuando tenía 14, con una copia *"no muy legal"* de Visual Studio 2008. Desde entonces no he parado de programar.
+De alguna manera mi papá consiguió un PDF sobre Macromedia Dreamweaver. Aunque estaba desactualizado, fue suficiente para empezar. Ahí descubrí mi pasión por la web, y he estado aprendiendo de forma independiente, aprovechando cada oportunidad para mejorar mis habilidades como programador.
+
+**En 2018, cuando vine a graduarme de Ingeniería en Sistemas** en la universidad, ya había tenido experiencia trabajando como desarrollador en varios sitios, y como freelancer. Pero no me detuve ahí; siempre estoy aprendiendo cosas nuevas y buscando nuevos retos.
+Lo que me llevó a trabajar remoto para compañías internacionales como [GBH](https://gbh.com.do/), [Virtual Mind](https://virtualmind.com/), [TheySaid](https://www.theysaid.io/), entre otras.
+
+## Lo que hago
+
+El termino *FrontEnd Engineer* puede significar muchas cosas. En principio significa que uso HTML, CSS, JavaScript y todos los sabores relacionados para crear una interfaz que ayude a los usuarios a lograr lo que quieren y a la compañía a llegar a más usuarios.
+
+Mi trabajo es crear lo que los usuraris ven cuando visitan una página. Los botones, colores e interacciones. El punto de contacto entre la compañía y sus usuarios. Y siempre estoy buscando formas de hacer el viaje más agradable.
+
+**Para el usuario**: el software será rápido, responsivo, intuitivo y fácil de usar.
+
+**Para la compañía**: el software será entregado a tiempo y dentro del presupuesto, fácil de mantener y extender.
+
+**Para mí**: es trabajar en un proyecto del que pueda estar orgulloso, donde aprenderé cosas nuevas.
+
+<FullWidthBlock withContainer class="bg-slate-200 dark:prose-blockquote:border-slate-700 prose-blockquote:border-slate-400 dark:bg-slate-900 prose-blockquote:opacity-80">
+
+## Creencias fundamentales
+
+<div class="grid md:grid-cols-3 gap-8">
+  <div>
+
+### Experiencia de usuario (UX)
+
+  > Empieza con el usuario en mente, y lo demás vendrá por añadidura.
+  
+  Una página web o una aplicación usualmente es el punto de contacto entre el usuario y la compañía. El rendimiento, la accesibilidad y la usabilidad son vitales para proveer una buena experiencia de usuario.
+  
+  **Rendimiento**: Sé lo frustrante que puede ser usar una página web lenta, o poco responsiva. Por eso siempre abordo cada situación con una mentalidad de mejora progresiva.
+  
+  **Accesibilidad**: A diferencia de otras plataformas, la web puede ser accedida desde casi cualquier dispositivo. Con pantallas de todos los tamaños, rangos de colores y métodos de entrada; por lo que pensar en la accesibilidad es un tema que siempre debe estar sobre la mesa.
+
+  </div>
+
+  <div>
+
+### Experiencia del desarollador (DX)
+  
+  > Los desarrolladores pasan más tiempo leyendo código que escribiéndolo.
+
+  Tener una buena experiencia de desarrollo es crítico para aumentar la productividad. Más productividad significa más valor para nuestros usuarios en menos tiempo.
+
+  **Calidad de código**: Siempre trato de escribir código que sea fácil de leer y entender, evitando complejidad innecesaria y abstracciones apresuradas ([AHA](https://kentcdodds.com/blog/aha-programming)).
+
+  **Pruebas y documentación**: Parte de ser productivo es no perder tiempo tratando de entender como funcionan las cosas. Tener la confianza de que tus cambios no romperán algo más a veces es subestimado. Escribir buena documentación y pruebas ha salvado a Misael del futuro incontables veces.
+
+  </div>
+
+  <div>
+
+### Ayudar a los demás
+
+  > El fin de todo conocimiento debe ser el servicio a los demás.
+
+  A pesar de que disfruto programar, recientemente descubrí que encuentro más alegría ayudando a otros a mejorar sus habilidades. Siempre estoy buscando formas de ayudar a otros, y compartir mi experiencia y conocimiento a quien lo requiera.
+
+  **Trabajo en equipo**: El software de alta calidad es construido por equipos, no por individuos. Confiar en los demás y ayudar a los demás es vital para crear software que trascienda.
+
+  **Mentoría**: A veces, una conversación uno a uno con alguien puede ser más valiosa que leer un libro o ver un video. Por eso siempre [estoy disponible](/es/contacto) para preguntas y ayudar tanto como sea posible.
+
+  </div>
+</div>
+
+</FullWidthBlock>
+
+## Echa un vistazo a lo que estoy escribiendo
+
+Intento escribir sobre las cosas que me hubiera gustado saber cuando empecé a aprender sobre ellas.
+
+<FullWidthBlock withContainer>
+  ENTRADAS RECIENTES
+</FullWidthBlock>
