--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -31,7 +31,7 @@
     "theme": "Theme",
     "original_version": "Original Version",
     "more_about_me": "Know me more",
-    "cv_download": "Resume"
+    "download_here": "Download here"
   },
   "messages": {
     "page_not_found": "Page not found",
@@ -43,7 +43,8 @@
     "contact_thanks": "Thanks for contacting me!",
     "contact_thanks_description": "I will contact you as soon as possible.",
     "reading_translation_archive": "This {{collection_name}} is originally written in {{original_language}}. To see all the entries, visit the ",
-    "incomplete_translation_disclaimer": "This translation may be incomplete. To see the original version, visit the "
+    "incomplete_translation_disclaimer": "This translation may be incomplete. To see the original version, visit the ",
+    "cv_is_available_in": "My resume is available to "
   },
   "page_descriptions": {
     "blog": "Find articles about web development, technology, programming, design and more.",
