--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -31,7 +31,8 @@
     "theme": "Tema",
     "original_version": "Versión Original",
     "more_about_me": "Más sobre mí",
-    "cv_download": "Descargar CV"
+    "download": "Descargar",
+    "download_here": "Descarga aquí"
   },
   "messages": {
     "page_not_found": "Página no encontrada",
@@ -43,7 +44,8 @@
     "contact_thanks": "Gracias por contactarme",
     "contact_thanks_description": "Me pondré en contacto contigo lo antes posible.",
     "reading_translation_archive": "[NOTE]: esta KEY no se usa en español, porque es el lenguaje original",
-    "incomplete_translation_disclaimer": "[NOTE]: esta KEY no se usa en español, porque es el lenguaje original"
+    "incomplete_translation_disclaimer": "[NOTE]: esta KEY no se usa en español, porque es el lenguaje original",
+    "cv_is_available_in": "Mi cv está disponible para"
   },
   "page_descriptions": {
     "blog": "Encuentra artículos sobre desarrollo web, tecnología, programación, diseño y más.",
