move page layouts to a subfolder insid layouts

--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -3,7 +3,7 @@ title: Hi, I'm Misael Taveras
 description: I'm a FrontEnd engineer with more than 8 years of experince trying to improve each day.
 lang: "en"
 cvLink: "t.com"
-layout: "../../layouts/About.page.astro"
+layout: "@/layouts/pages/About.astro"
 ---
 
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
