--- a/src/pages/es/sobre-mi.mdx
+++ b/src/pages/es/sobre-mi.mdx
@@ -3,7 +3,7 @@ title: Hola, soy Misael Taveras (taverasmisael)
 description: Soy un ingeniero de frontend con más de ocho años de experiencia que trata de mejorar cada día.
 lang: "es"
 cvLink: "t.com"
-layout: "../../layouts/About.page.astro"
+layout: "@/layouts/pages/About.astro"
 ---
 
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
