crearte RecentEntries compoenent and add it to about page

--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -7,7 +7,6 @@ layout: "@/layouts/pages/About.astro"
 ---
 
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
-import CardPost from "@/components/content/CardPost.astro";
 
 <FullWidthBlock withContainer class="min-h-screen bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:min-h-max md:py-24">
     <div class="lg:grid lg:grid-cols-2 lg:gap-4">
@@ -97,6 +96,4 @@ I build what the user sees when they visit the page. The buttons, colours and in
 
 I try to write about the things that I wish I knew when I started learning about them.
 
-<FullWidthBlock withContainer>
-  RECENT POSTS
-</FullWidthBlock>
+Read more on my [blog](/en/blog). Most posts are still in [Spanish](/es/blog), but I'm working on translating them.
