--- a/src/pages/es/sobre-mi.mdx
+++ b/src/pages/es/sobre-mi.mdx
@@ -7,7 +7,6 @@ layout: "@/layouts/pages/About.astro"
 ---
 
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
-import CardPost from "@/components/content/CardPost.astro";
 
 <FullWidthBlock withContainer class="min-h-screen bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:min-h-max md:py-24">
     <div class="lg:grid lg:grid-cols-2 lg:gap-4">
@@ -99,6 +98,4 @@ Mi trabajo es crear lo que los usuraris ven cuando visitan una página. Los boto
 
 Intento escribir sobre las cosas que me hubiera gustado saber cuando empecé a aprender sobre ellas.
 
-<FullWidthBlock withContainer>
-  ENTRADAS RECIENTES
-</FullWidthBlock>
+Encuentra todas las entradas en mi [blog](/es/blog).
