remove full height on mobile for About page

--- a/src/pages/es/sobre-mi.mdx
+++ b/src/pages/es/sobre-mi.mdx
@@ -8,7 +8,7 @@ layout: "@/layouts/pages/About.astro"
 
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 
-<FullWidthBlock withContainer class="min-h-screen bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:min-h-max md:py-24">
+<FullWidthBlock withContainer class="bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:py-24">
     <div class="lg:grid lg:grid-cols-2 lg:gap-4">
       <h1 class="!mt-0 text-4xl font-bold leading-snug dark:text-slate-100 max-w-2xl">Hola, soy <span class="text-slate-950 dark:text-blue-50">Misael Taveras</span>. Amo codear cosas que puedas ver en tu navegador.</h1>
       <div class="text-xl leading-relaxed dark:text-slate-300">
