--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -9,7 +9,7 @@ layout: "@/layouts/pages/About.astro"
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 
 <FullWidthBlock withContainer class="bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:py-24">
-    <div class="lg:grid lg:grid-cols-2 lg:gap-4">
+    <div class="lg:grid lg:items-center xl:items-start lg:grid-cols-2 lg:gap-4">
       <h1 class="!mt-0 text-4xl font-bold leading-snug dark:text-slate-100 max-w-2xl">Hi, I'm <span class="text-slate-950 dark:text-blue-50">Misael Taveras</span>. I love building stuff with code that you can use on your browser.</h1>
       <div class="text-xl leading-relaxed dark:text-slate-300">
 
@@ -46,7 +46,7 @@ I build what the user sees when they visit the page. The buttons, colours and in
 
 ## Core beliefs
 
-<div class="grid md:grid-cols-3 gap-8">
+<div class="grid lg:grid-cols-2 xl:grid-cols-3 gap-8">
   <div>
 
 ### User experience
@@ -75,7 +75,7 @@ I build what the user sees when they visit the page. The buttons, colours and in
 
   </div>
 
-  <div>
+  <div class="lg:col-span-2 xl:col-span-1">
 
 ### Helping others
 
