--- a/src/pages/es/sobre-mi.mdx
+++ b/src/pages/es/sobre-mi.mdx
@@ -9,7 +9,7 @@ layout: "@/layouts/pages/About.astro"
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
 
 <FullWidthBlock withContainer class="bg-blue-50 px-8 py-12 bg-gradient-to-tl from-blue-100 to-blue-50 dark:from-slate-900 dark:to-slate-950 dark:bg-slate-900 md:py-24">
-    <div class="lg:grid lg:grid-cols-2 lg:gap-4">
+    <div class="lg:grid lg:items-center xl:items-start lg:grid-cols-2 lg:gap-4">
       <h1 class="!mt-0 text-4xl font-bold leading-snug dark:text-slate-100 max-w-2xl">Hola, soy <span class="text-slate-950 dark:text-blue-50">Misael Taveras</span>. Amo codear cosas que puedas ver en tu navegador.</h1>
       <div class="text-xl leading-relaxed dark:text-slate-300">
 
@@ -48,7 +48,7 @@ Mi trabajo es crear lo que los usuraris ven cuando visitan una página. Los boto
 
 ## Creencias fundamentales
 
-<div class="grid md:grid-cols-3 gap-8">
+<div class="grid lg:grid-cols-2 xl:grid-cols-3 gap-8">
   <div>
 
 ### Experiencia de usuario (UX)
@@ -77,7 +77,7 @@ Mi trabajo es crear lo que los usuraris ven cuando visitan una página. Los boto
 
   </div>
 
-  <div>
+  <div class="lg:col-span-2 xl:col-span-1">
 
 ### Ayudar a los demás
 
