create and use a new contact for layout
I think this alt will be the main. Let's time decide.

--- a/src/pages/en/contact.mdx
+++ b/src/pages/en/contact.mdx
@@ -1,14 +1,14 @@
 ---
 title: Hey, let's talk!
-description: You can reach out to me with no strings attached. I'm always happy to help.
+description: You can reach out to me, no strings attached. I'm always happy to help.
 lang: 'en'
-layout: '@/layouts/pages/Contact.astro'
+layout: '@/layouts/pages/ContactAlt.astro'
 ---
-
-## How can I help you?
 
 If you have any questions, feedback, or just want to say hi, I'm more than happy to hear from you.
 
-I check my email regularly and I'll get back to you as soon as possible. I'm also **available for hire** if you need help with your project.
+### I'm **available for hire** if you need help in your project
 
-Find me on [Twitter](https://twitter.com/taverasmisael), [GitHub](https://github.com/taverasmisael), [LinkedIn](https://www.linkedin.com/in/taverasmisael/), [CodePen](https://codepen.io/taverasmisael), [Dev.to](https://dev.to/taverasmisael), and [Medium](https://medium.com/@taverasmisael) as **@taverasmisael**.
+You can use [the form](#contact-form). I check my email regularly and will get back to you as soon as possible.
+
+Find me on [Twitter](https://twitter.com/taverasmisael), [GitHub](https://github.com/taverasmisael), [LinkedIn](https://www.linkedin.com/in/taverasmisael/), and [Dev.to](https://dev.to/taverasmisael) as **@taverasmisael**.
