--- a/src/pages/es/contacto.mdx
+++ b/src/pages/es/contacto.mdx
@@ -2,13 +2,13 @@
 title: Hola, ¡Hablemos!
 description: Puedes contactarme sin compromiso. Siempre estoy dispuesto a ayudar.
 lang: 'es'
-layout: '@/layouts/pages/Contact.astro'
+layout: '@/layouts/pages/ContactAlt.astro'
 ---
 
-## ¿Cómo puedo ayudarte?
+Ya sea que tengas alguna pregunta, comentario o simplemente quieras saludar, estoy más que feliz de saber de ti.
 
-Ya sea que tengas alguna pregunta, comentario o simplemente quieras saludar, estoy más que feliz de escucharte.
+### Estoy **disponible para colaborar** si necesitas ayuda con tu proyecto
 
-Reviso mi correo regularmente y te responderé lo antes posible. También estoy **aceptando trabajos** si necesitas ayuda con tu proyecto.
+Puedes usar [el formulario](#contact-form). Reviso mi correo regularmente y te responderé lo antes posible.
 
-Encuentrame en [Twitter](https://twitter.com/taverasmisael), [GitHub](https://github.com/taverasmisael), [LinkedIn](https://www.linkedin.com/in/taverasmisael/), [CodePen](https://codepen.io/taverasmisael), [Dev.to](https://dev.to/taverasmisael) y [Medium](https://medium.com/@taverasmisael) como **@taverasmisael**.
+Encuentrame en [Twitter](https://twitter.com/taverasmisael), [GitHub](https://github.com/taverasmisael), [LinkedIn](https://www.linkedin.com/in/taverasmisael/) y [Dev.to](https://dev.to/taverasmisael) como **@taverasmisael**.
