delete unused Contact layout

--- a/src/pages/en/contact.mdx
+++ b/src/pages/en/contact.mdx
@@ -2,7 +2,7 @@
 title: Hey, let's talk!
 description: You can reach out to me, no strings attached. I'm always happy to help.
 lang: 'en'
-layout: '@/layouts/pages/ContactAlt.astro'
+layout: '@/layouts/pages/Contact.astro'
 ---
 
 If you have any questions, feedback, or just want to say hi, I'm more than happy to hear from you.
