--- a/src/pages/es/contacto.mdx
+++ b/src/pages/es/contacto.mdx
@@ -2,7 +2,7 @@
 title: Hola, ¡Hablemos!
 description: Puedes contactarme sin compromiso. Siempre estoy dispuesto a ayudar.
 lang: 'es'
-layout: '@/layouts/pages/ContactAlt.astro'
+layout: '@/layouts/pages/Contact.astro'
 ---
 
 Ya sea que tengas alguna pregunta, comentario o simplemente quieras saludar, estoy más que feliz de saber de ti.
